Added home button

--- a/recipe.html
+++ b/recipe.html
@@ -69,22 +69,21 @@
 	</head>
 
 	<body>
-		<button id="darkModeToggle" aria-label="Toggle dark mode">
-			<img src="images/dark-mode.png" alt="Switch to dark mode" class="sun">
-			<img src="images/light-mode.png" alt="Switch to light mode" class="moon">
-		</button>
+		<!-- title bar with home button and dark mode toggle -->
+		<div id="titleBar">
+			<a href="index.html" id="homeButton">
+				<svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+					<path fill="currentColor" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"></path>
+				</svg>
+				Home
+			</a>
+			<button id="darkModeToggle" aria-label="Toggle dark mode">
+				<img src="images/dark-mode.png" alt="Switch to dark mode" class="sun">
+				<img src="images/light-mode.png" alt="Switch to light mode" class="moon">
+			</button>
+		</div>
 
 		<div id="wrapper" class="recipe">
-			
-			<!-- back button -->
-			<!-- icon via: https://fontawesome.com/icons/arrow-left -->
-			<p id="back">
-				<a href="index.html">
-					<svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-						<path fill="currentColor" d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"></path>
-					</svg>
-				</a>
-			</p>
 
 			<!-- recipe (details inserted with js) -->
 			<section id="heroimage"></section>
