--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html profile="http://www.w3.org/2005/10/profile">
 	<head>
-		<title>Recipe Book</title>
+		<title>Stock Recipe Book</title>
 
 		<!-- basics -->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-		<link rel="icon" type="image/png" href="http://www.jeffreythompson.org/graphics/favicon.png">
+		<link rel="icon" type="image/png" href="images/favicon.png">
 
 		<!-- font and styles -->
 		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,700,700i,900" rel="stylesheet"> 
